init landing page

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -1,2 +1,17 @@
-.container
-	home page
+.landing
+	.promo-section
+		.container
+			.row
+				.col-sm-12
+					.title Seperate average people from talents 
+						
+					.action
+						a href="" class='btn btn-lg btn-success' Try it - free
+
+	.what
+		.title What is Qizlet?
+	.how
+
+	.why
+
+
