--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -9,9 +9,41 @@
 						a href="" class='btn btn-lg btn-success' Try it - free
 
 	.what
-		.title What is Qizlet?
+		.container
+			.title What is Qizlet?
+			.desc Qizler is a quiz platform for a service (QaaS)
+
 	.how
+		.container
+			.head How it works ?
+
+			.row
+				.col-sm-4
+					.icon 
+						= retina_tag 'icon-quiz.png'
+					.desc 1. Create quiz or Discover our quiz pool.
+
+				.col-sm-4
+					.icon 
+						= retina_tag 'icon-do.png'
+					.desc 2. Share to your candidate.
+
+				.col-sm-4
+					.icon 
+						= retina_tag 'icon-evalution.png'
+					.desc 3. Evaluation
+
+			.action
+				a href="" class='btn btn-lg btn-success' Try it - free
+
 
 	.why
+		.container
+			.title Why should I use Qizler ?
+			.desc To grow your business you need talent. 
+						Qizler delivers a quiz pool of responsive candidates so you can spend less time on sourcing 
+						and more time interviewing & hiring.
+			.action
+				a href="" class='btn btn-lg btn-success' Try it - free
 
 
