Correct app name to Qizler.

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -10,7 +10,7 @@
 
 	.what
 		.container
-			.title What is Qizlet?
+			.title What is Qizler?
 			.desc Qizler is a quiz platform for a service (QaaS)
 
 	.how
