--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -6,6 +6,25 @@ html
 		= javascript_include_tag 'application', 'data-turbolinks-track' => true
 		= csrf_meta_tags
 	body
+
+		/ todo: hide if user_signed_in? == false
+		.navbar.navbar-default
+			.navbar-header
+				button.navbar-toggle data-target=".navbar-responsive-collapse" data-toggle="collapse" type="button" 
+					span.icon-bar
+					span.icon-bar
+					span.icon-bar
+
+				= link_to Qizler, root_path, class: "navbar-brand"
+				
+			.navbar-collapse.collapse.navbar-responsive-collapse
+				ul.nav.navbar-nav
+				
+				/
+					ul.nav.navbar-nav.navbar-right
+						li
+							a href="javascript:void(0)" Try it free
+					
 		== yield
 
 	footer &copy; 2014 Qizler, ALL RIGHTS RESERVED.
