--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -30,6 +30,10 @@ footer {
 	background-color: rgb(240, 240, 240);
 }
 
+.navbar {
+	margin-bottom: 0px !important;
+}
+
 .landing {
 	.promo-section {
 		// @include at2x('landing-bg', jpg);
@@ -127,4 +131,79 @@ footer {
 			margin-top: 50px;
 		}
 	}
+}
+
+.creator-dashboard, .exam-form {
+	.exams-section {
+		width: 300px;
+		height: 100%;
+		position: absolute;
+		min-height: 600px;
+		background-color: #efefef;
+		h4 {
+			padding: 20px 10px;
+		}
+		.action {
+			display: inline-block;
+			position: absolute;
+			right: 10px;
+			a {
+				margin-left: 7px;
+				border: 1px solid #e0e0e0;
+				border-radius: 100%;
+				font-size: 16px;
+				padding: 5px;
+				width: 35px;
+				height: 35px;
+				display: inline-block;
+				text-align: center;
+				vertical-align: middle;
+				background-color: #fff;
+				&:hover {
+					background-color: #cecece;
+				}
+			}
+		}
+		ul.exams {
+			padding: 0;
+			background-color: #efefef;
+			li.exam {
+				list-style-type: none;
+				padding: 20px 10px;
+				border-bottom: 1px solid #e0e0e0;
+				.name {
+					display: inline-block;
+					margin-top: 6px;
+					max-width: 115px;
+					overflow: hidden;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					display: inline-block;
+				}
+				&:hover {
+					background-color: #e0e0e0;
+				}
+			}
+		}	
+	}
+	.qiz-section, .form-section {
+		width: 700px;
+		width: calc(100% - 300px);
+		height: 100%;
+		background-color: #fff;
+		position: absolute;
+		min-height: 600px;
+		padding: 10px;
+		left: 300px;
+		> *:first-child {
+			margin-top: 15px;	
+		}
+	}	
+}
+
+.exam-form {
+	.exam-section {
+	}	
+
+
 }
