--- a/app/views/exams/index.slim
+++ b/app/views/exams/index.slim
@@ -10,7 +10,7 @@
 			- @exams.each do |exam|
 				li.exam
 					.name
-						= link_to exam.name, exam_path(exam)
+						= link_to exam.name, exam_questions_path(exam)
 					.action
 						= link_to edit_exam_path(exam)
 							i class='fa fa-edit'
