Updated Try it button to go to the login page.

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -6,8 +6,7 @@
 					.title Seperate average people from talents 
 						
 					.action
-						a href="" class='btn btn-lg btn-success' Try it - free
-
+						a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
 	.what
 		.container
 			.title What is Qizler?
@@ -34,8 +33,7 @@
 					.desc 3. Evaluation
 
 			.action
-				a href="" class='btn btn-lg btn-success' Try it - free
-
+				a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
 
 	.why
 		.container
@@ -44,6 +42,6 @@
 						Qizler delivers a quiz pool of responsive candidates so you can spend less time on sourcing 
 						and more time interviewing & hiring.
 			.action
-				a href="" class='btn btn-lg btn-success' Try it - free
+				a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
 
 
