--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -142,6 +142,10 @@ footer {
 		overflow-y: scroll;
 		position: absolute;
 		background-color: #efefef;
+		&.mini {
+			width: 70px;
+			background-color: #3F51B5;
+		}
 		h4 {
 			padding: 20px 10px;
 		}
@@ -149,6 +153,12 @@ footer {
 			display: inline-block;
 			position: absolute;
 			right: 10px;
+			&.left {
+				left: 10px;
+				a {
+					margin-right: 7px;
+				}
+			}
 			a {
 				margin-left: 7px;
 				border: 1px solid #e0e0e0;
@@ -199,6 +209,11 @@ footer {
 		position: absolute;
 		padding: 10px;
 		left: 300px;
+		&.lg {
+			width: 700px;
+			width: calc(100% - 70px);
+			left: 70px;
+		}
 		> *:first-child {
 			margin-top: 15px;	
 		}
@@ -207,7 +222,14 @@ footer {
 
 .exam-form {
 	.exams-section {
-		.desc, .duration {
+		&.child {
+			border-left: 10px solid #3F51B5;	
+		}
+		.desc {
+			margin-top: 30px;
+			padding: 0 10px;
+		}
+		.duration {
 			margin-top: 10px;
 			padding: 0 10px;
 		}
