--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -167,7 +167,7 @@ footer {
 			}
 			a {
 				margin-left: 7px;
-				border: 1px solid #e0e0e0;
+				// border: 1px solid #e0e0e0;
 				border-radius: 100%;
 				font-size: 16px;
 				padding: 5px;
@@ -229,7 +229,7 @@ footer {
 .exam-form {
 	.exams-section {
 		&.child {
-			border-left: 10px solid #ccc;	
+			border-left: 15px solid #ccc;	
 		}
 		.desc {
 			margin-top: 30px;
