--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -24,6 +24,8 @@ html
 						ul.nav.navbar-nav.navbar-right
 							li.dropdown
 								a.dropdown-toggle href="#" data-toggle='dropdown' 
+									i.fa.fa-user 
+									| &nbsp;
 									= current_user.username
 									b.caret
 								ul.dropdown-menu
