[#7] Refined ExamMailer to use Assignment object.

--- a/app/views/exam_mailer/notify_assignment.html.slim
+++ b/app/views/exam_mailer/notify_assignment.html.slim
@@ -14,7 +14,7 @@ html
         | has sent you an assignment on Qizler.
       p To take this exam, just simply follow this link:
       p 
-        a href=@url #{@url}
+        a href=assignments_url(@assignment) #{assignments_url(@assignment)}
       p Keep in mind though that life is not Mario, so once you start the exam, you only get one attempt to finish.
       p
       p Thank you, and good luck!
