#1 replace text_area to text_field on solution field

--- a/app/views/exams/index.slim
+++ b/app/views/exams/index.slim
@@ -35,6 +35,7 @@
 									= assignment.user.email
 								- unless assignment.finished_at.nil?
 									= assignment.score
+									= time_ago_in_words(assignment.finished_at)
 								- else
 									| not started
 
