--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -39,7 +39,7 @@
 		.container
 			.title Why should I use Qizler ?
 			.desc To grow your business you need talent. 
-						Qizler delivers a quiz pool of responsive candidates so you can spend less time on sourcing 
+						Qizler provide a quiz platform for candidates so you can spend less time on sourcing 
 						and more time interviewing & hiring.
 			.action
 				a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
