--- a/app/views/exams/index.slim
+++ b/app/views/exams/index.slim
@@ -26,7 +26,7 @@
 			.row
 				.col-sm-12
 					h4 Dashboard
-					= render 'progress_pie_chart' if @assignments.count > 0
+					= render 'progress_pie_chart'
 
 #modal-assign.modal
 	.modal-dialog
