Refine some of the wording, and starts with why.

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -3,45 +3,44 @@
 		.container
 			.row
 				.col-sm-12
-					.title Seperate average people from talents 
+					.title find the right talents
 						
 					.action
-						a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
+						a.btn.btn-lg.btn-success href=new_user_session_path Try - Free
+	.why
+		.container
+			.title Why should I use Qizler ?
+			.desc 
+				| To grow your business, you need talents. 
+				| Qizler provides a tool to refined your candidate slections, 
+				| so that you can get to spen more time on growing your business.
+			.action
+				a.btn.btn-lg.btn-success href=new_user_session_path Try - Free
 	.what
 		.container
 			.title What is Qizler?
-			.desc Qizler is a quiz platform for a service (QaaS)
-
+			.desc Qizler is a quiz platform as a service (QaaS)
 	.how
 		.container
-			.head How it works ?
+			.head How does it work?
 
 			.row
 				.col-sm-4
 					.icon 
 						= retina_tag 'icon-quiz.png'
-					.desc 1. Create quiz or Discover our quiz pool.
+					.desc 1. Create quiz or select from our quiz pool.
 
 				.col-sm-4
 					.icon 
 						= retina_tag 'icon-do.png'
-					.desc 2. Share to your candidate.
+					.desc 2. Sent your quiz to candidates.
 
 				.col-sm-4
 					.icon 
 						= retina_tag 'icon-evalution.png'
-					.desc 3. Evaluation
-
+					.desc 3. Evaluate then pick the right one!
 			.action
-				a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
+				a.btn.btn-lg.btn-success href=new_user_session_path Try - Free
 
-	.why
-		.container
-			.title Why should I use Qizler ?
-			.desc To grow your business you need talent. 
-						Qizler provide a quiz platform for candidates so you can spend less time on sourcing 
-						and more time interviewing & hiring.
-			.action
-				a.btn.btn-lg.btn-success href=new_user_session_path Try it - free
 
 
