[#12] Added screencast video.

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -39,8 +39,8 @@
 					.icon 
 						= retina_tag 'icon-evalution.png'
 					.desc 3. Evaluate then pick the right one!
+			.row.text-center
+				.subhead See in action
+				iframe allowfullscreen="" frameborder="0" height="360" src="//www.youtube.com/embed/AS22-mUr_d8?rel=0" width="640" 
 			.action
 				a.btn.btn-lg.btn-success href=new_user_session_path Try - Free
-
-
-
