--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -92,6 +92,13 @@ footer {
 			font-size: 40px;
 			color: #898989;
 		}
+		.subhead {
+			@include center;
+			font-family: 'Avenir-Book', sans-serif;
+			font-size: 30px;
+			padding: 30px 0 20px 0px;
+			color: #898989;
+		}
 		.icon {
 			@include center;
 			margin-top: 48px;
