[#15] Added voting banner.

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -44,3 +44,12 @@
 				iframe allowfullscreen="" frameborder="0" height="360" src="//www.youtube.com/embed/AS22-mUr_d8?rel=0" width="640" 
 			.action
 				a.btn.btn-lg.btn-success href=new_user_session_path Try - Free
+
+	/! Place this before your </body> tag.
+	javascript:
+	  | var rumbleBannerBackgroundColor, rumbleBannerTextColor, rumbleBannerLinkColor, rumbleBannerPlacement;
+	  | rumbleBannerBackgroundColor = "#161616";
+	  | rumbleBannerTextColor = "#b0b0b0";
+	  | rumbleBannerLinkColor = "#ffffff";
+	  | rumbleBannerPlacement = "top"; // Optionally replace with "bottom".
+	script src="https://d4nnn7wspfa3h.cloudfront.net/banner-2014.js" type="text/javascript" 
