[#11] Added team credit to footer.

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -34,4 +34,14 @@ html
 						
 		== yield
 
-	footer &copy; 2014 Qizler, ALL RIGHTS RESERVED.
+	footer 
+		.container-fluid
+			p 
+				| Made with love by 
+				a href='https://twitter.com/manat' @manat
+				|, 
+				a href='https://twitter.com/phamonyut' @phamonyut
+				|, and 
+				a href='https://www.facebook.com/pongsanti.tanvejsilp' @pop
+			p 
+				| 2014 Qizler, ALL RIGHTS RESERVED
