Change @pop to @pongsanti to make it consistent.

--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -42,6 +42,6 @@ html
 				|, 
 				a href='https://twitter.com/phamonyut' @phamonyut
 				|, and 
-				a href='https://www.facebook.com/pongsanti.tanvejsilp' @pop
+				a href='https://www.facebook.com/pongsanti.tanvejsilp' @pongsanti
 			p 
 				| 2014 Qizler, ALL RIGHTS RESERVED
