--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -12,8 +12,8 @@
 			.title Why should I use Qizler ?
 			.desc 
 				| To grow your business, you need talents. 
-				| Qizler provides a tool to refined your candidate slections, 
-				| so that you can get to spen more time on growing your business.
+				| Qizler provides a tool to refined your candidate selections, 
+				| so that you can get to spend more time on growing your business.
 			.action
 				a.btn.btn-lg.btn-success href=new_user_session_path Try - Free
 	.what
