--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -38,7 +38,7 @@
 				.col-sm-4
 					.icon 
 						= retina_tag 'icon-evalution.png'
-					.desc 3. Evaluate then pick the right one!
+					.desc 3. Evaluate and then pick the right one!
 			.row.text-center
 				.subhead See in action
 				iframe allowfullscreen="" frameborder="0" height="360" src="//www.youtube.com/embed/AS22-mUr_d8?rel=0" width="640" 
