--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -37,7 +37,7 @@ html
 	footer 
 		.container-fluid
 			p 
-				| Made with love by 
+				| Made in rush by 
 				a href='https://twitter.com/manat' @manat
 				|, 
 				a href='https://twitter.com/phamonyut' @phamonyut
